--- a/main.css
+++ b/main.css
@@ -1,3 +1,29 @@
 body {
-  background-color: lightslategrey;
+  background-color: white;
+}
+
+.mainContainer {
+  display: flex;
+}
+
+.productCard {
+  width: 300px;
+  border: 1px solid lightblue;
+  margin: 10px;
+  float: left;
+}
+
+.productImg {
+  width: 250px;
+  justify-content: center;
+}
+
+.productAvail {
+  background-color: lightslategray;
+  color: yellow;
+  font-weight: bold;
+}
+
+p {
+  margin: 2px;
 }
