added product descriptions to cards

--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ h1 {
 
 .productDescription {
   text-align: justify;
-  margin: 2px;
+  margin: 2px 3px 6px 3px;
   font-family: 'News Cycle', sans-serif;
 }
 
