--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@ h1 {
   margin: 10px;
   float: left;
   box-shadow: 3px 3px 7px 1px #888888;
+  position: relative;
 }
 
 
@@ -35,8 +36,14 @@ h1 {
   width: 250px;
   justify-content: center;
   margin: 10px auto;
+  
 }
-
+.soldOut {
+  position: absolute;
+  top: 1%;
+  left: 5%;
+  background: transparent;
+}
 .productDescription {
   text-align: justify;
   margin: 2px 3px 6px 3px;
