--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
   text-align: center;
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Black Ops One', cursive;
 }
 .mainContainer {
   display: flex;
@@ -60,22 +60,24 @@ h1 {
 }
 .secondSection h3 {
   font-family: 'Oswald', sans-serif;
-  margin: 10px 0px 3px 8px;
+  margin: 10px 0px 1px 8px;
 }
 .specificationsSize {
   font-weight: bold;
   margin: 1px 0px 0px 16px;
+  font-size: small;
 }
 .specificationsFooter {
-  font-size: small;
+  font-size: x-small;
   margin: 2px;
   font-family: 'News Cycle', sans-serif;
 }
 .thirdSection h3 {
   font-family: 'Oswald', sans-serif;
-  margin: 3px 0px 0px 8px;
+  margin: 1px 0px 0px 8px;
 }
 .priceP {
+  font-size: small;
   font-weight: bold;
-  margin: 1px 0px 0px 16px; 
+  margin: 0px 0px 0px 16px; 
 }
